feature: full bytecode cache for all .clj files